# Laboratorios/lab-api-001/routes/users.js
@@ -8,17 +8,28 @@ const {
   listUsers,
 } = require("../controllers/users");
 const { checkUserIsAuthenticated, checkRoles } = require("../middlewares/auth");
+const { validateSchema } = require("../middlewares/validation");
 const { ROLES } = require("../utils/constants");
+const {
+  createUserSchema,
+  loginSchema,
+  recoverPasswordSchema,
+  resetPasswordSchema,
+} = require("../validators/users");
 
 router
   .route("/")
-    .get([checkUserIsAuthenticated, checkRoles([ROLES.ADMIN])], listUsers)
-    .post(createUser);
+  .get([checkUserIsAuthenticated, checkRoles([ROLES.ADMIN])], listUsers)
+  .post([validateSchema(createUserSchema)], createUser);
 
-router.route("/login").post(loginUser);
+router.route("/login").post([validateSchema(loginSchema)], loginUser);
 
-router.route("/recover-password").post(recoverPassword);
+router
+  .route("/recover-password")
+  .post([validateSchema(recoverPasswordSchema)], recoverPassword);
 
-router.route("/reset-password").patch(resetPassword);
+router
+  .route("/reset-password")
+  .patch([validateSchema(resetPasswordSchema)], resetPassword);
 
 module.exports = router;
